force-app/main/default/objects/Charket__WeChatCampaignFlowEvent__e/Charket__WeChatCampaignFlowEvent__e.object-meta.xml
<CustomObject>
    <label>WeChat Campaign Flow Event</label>
    <pluralLabel>WeChat Campaign Flow Events</pluralLabel>
</CustomObject>