force-app/main/default/objects/Charket__WeChatCampaignFlowEvent__e/fields/Charket__WeChatCampaignFlowStep__c.field-meta.xml
<CustomField>
    <fullName>Charket__WeChatCampaignFlowStep__c</fullName>
    <label>WeChat Campaign Flow Step</label>
    <length>18</length>
    <type>Text</type>
</CustomField>