force-app/main/default/objects/Charket__WeChatCampaignFlowEvent__e/fields/Charket__WeChatCheckinStaff__c.field-meta.xml
<CustomField>
    <fullName>Charket__WeChatCheckinStaff__c</fullName>
    <label>WeChat Check-in Staff</label>
    <length>18</length>
    <type>Text</type>
</CustomField>