force-app/main/default/objects/Charket__WeChatCampaignFlowEvent__e/fields/Charket__WeChatFollowerData__c.field-meta.xml
<CustomField>
    <fullName>Charket__WeChatFollowerData__c</fullName>
    <label>WeChat Follower Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>