force-app/main/default/objects/Charket__WeChatCampaignFlowEvent__e/fields/Charket__WeChatQRCode__c.field-meta.xml
<CustomField>
    <fullName>Charket__WeChatQRCode__c</fullName>
    <label>WeChat QR Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>